--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -46,12 +46,10 @@ jobs:
         with:
           node-version: "20.17.0"
           cache: ${{ steps.detect-package-manager.outputs.manager }}
-
       - name: Setup Pages
         uses: actions/configure-pages@v5
         with:
           static_site_generator: next
-
       - name: Restore cache
         uses: actions/cache@v4
         with:
@@ -62,17 +60,14 @@ jobs:
           # If source files changed but packages didn't, rebuild from a prior cache.
           restore-keys: |
             ${{ runner.os }}-nextjs-${{ hashFiles('**/package-lock.json', '**/yarn.lock') }}-
-
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
-
       - name: Build with Next.js
         run: ${{ steps.detect-package-manager.outputs.runner }} next build
-
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
-          path: .next # Use the correct build output directory for Next.js
+          path: ./out
 
   deploy:
     needs: build # Ensure the build is completed before deploying
